fix: spacing

--- a/css/form.css
+++ b/css/form.css
@@ -275,18 +275,37 @@ input:checked + .slider:before {
 
 /* radio classes */
 
-.radio__container {
-display: flex;
-flex-direction: column;
+.radio__section {
+    display: flex;
+}
 
+/* .radio__container {
+  display: flex;
+  flex-direction: column;
+  gap: .1rem;
+} */
+
+
+.label_class {
+    display: flex;
+    gap: 0.5rem;
+}
+
+.radio__group {
+    margin-top: 1rem;
+}
+
+.radio__group label {
+    margin-top: .5rem;
 }
 
 input[type="radio"] {
     appearance: none;
     background-color: var(--backgroundColor);
     border-radius: 50%;
+
 }
 
 input[type="radio"]:checked {
-    background-color: var(--accentColor);
+    background-color:white;
 }
